ingress-okd-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers
spec:
  ingressClassName: openshift-default
  rules:
    - host: nginx.okd.cyber-crypt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: apache.okd.cyber-crypt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
